# gesture-recognition

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-tests.yml  deploy.yml  test_and_deploy.yml
backend/recognition_api/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  recognition-api-compose.yml  requirements.txt  start.py
backend/recognition_api/api/dependencies/: services.py
backend/recognition_api/api/routes/v1/: __init__.py  root.py
backend/recognition_api/api/v1/: __init__.py
backend/recognition_api/api/v1/endpoints/: root.py
backend/recognition_api/app/: main.py
backend/recognition_api/app/api/dependencies/: __init__.py  services.py
backend/recognition_api/app/api/routes/v1/: __init__.py  model.py  root.py
backend/recognition_api/app/core/: config.py  dependencies.py
backend/recognition_api/app/interservice_grpc/stubs/: __init__.py  model_stub.py
backend/recognition_api/app/repositories/: __init__.py  model_repository.py
backend/recognition_api/app/services/: model_service.py
backend/recognition_api/core/: config.py  recognition_model_client.py
backend/recognition_api/grpc_clients/: __init__.py  model_client.py
backend/recognition_api/interservice_grpc/stubs/: model_stub.py
backend/recognition_api/repositories/: model_repository.py
backend/recognition_api/services/: __init__.py  model_service.py
backend/recognition_api/tests/: conftest.py  test_root.py
backend/recognition_model/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/shared/: .gitignore  generate.sh  pyproject.toml
backend/shared/generated_grpc/recognition_model/: recognition_model_pb2.py  recognition_model_pb2_grpc.py
backend/shared/generated_grpc/service/: service_pb2.py  service_pb2_grpc.py
backend/shared/proto/: recognition_model.proto  service.proto
frontend/: .dockerignore  .gitignore  Dockerfile  angular.json  docker-compose.yml  nginx.conf
frontend/src/: styles.scss
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/interceptors/: api-base-url.interseptor.ts  catch-error.interceptor.ts
frontend/src/app/modules/health-check/: health-check.component.html  health-check.component.scss  health-check.component.ts
frontend/src/app/state/health-check/: health-check.service.ts
frontend/src/env/: environment.model.ts  environment.ts
protos/: recognition_model.proto
protos/v1/: recognition_model.proto
