[project]
name = "gesture-recognition-api"
version = "0.1.1"
description = "RESTful API модели распознавания жестов."
authors = [
    {name = "alex6712",email = "alexeivanyukov@yandex.ru"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
