[project]
name = "gesture-recognition-model"
version = "0.1.0"
description = "Модель для определения жестов на видеопотоке."
authors = [
    {name = "alex6712",email = "alexeivanyukov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
#    "torch (>=2.7.0,<3.0.0)",
#    "torchvision (>=0.22.0,<0.23.0)",
#    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "backend-shared"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
backend-shared = { path = "../shared/", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
