[project]
name = "gesture-recognition-model"
version = "0.1.0"
description = "Модель для определения жестов на видеопотоке."
authors = [
    {name = "alex6712",email = "alexeivanyukov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio (>=1.71.0,<2.0.0)",
    "protobuf (>=6.30.2,<7.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
grpcio-tools = "^1.71.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
